--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <div id="map"></div>
   </div>
 
-  <script async defer src="lib/mdl/material.min.js"></script>
-  <script src="lib/knockout-3.4.0.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCDm6-E4pK_fRcLMpRYEMnnaPKXYjl7aw&callback=initMap"></script>
-  <script async defer src="js/app.js"></script>
+  <script src="lib/mdl/material.min.js"></script>
+  <script src="lib/knockout-3.4.0.js"></script>
+  <script src="lib/jquery-2.2.3.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
