fix: Fix image loading from Flickr

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </nav>
     </div>
     <div id="map"></div>
+    <div id="images"></div>
   </div>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCDm6-E4pK_fRcLMpRYEMnnaPKXYjl7aw&callback=initMap"></script>
