feat: Add error handling for map load event

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   </div>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCDm6-E4pK_fRcLMpRYEMnnaPKXYjl7aw&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCDm6-E4pK_fRcLMpRYEMnnaPKXYjl7aw&callback=hasMap"></script>
   <script src="lib/mdl/material.min.js"></script>
   <script src="lib/knockout-3.4.0.js"></script>
   <script src="lib/jquery-2.2.3.min.js"></script>
