fix: Re-enable optimized marker infowindow code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
       </div>
       <nav class="mdl-navigation" data-bind="foreach: filteredNav">
-        <a class="mdl-navigation__link" data-bind="text: $data.name, attr: { id: 'link' + $index() }, click: $parent.highlightListItem"></a>
+        <a class="mdl-navigation__link" data-bind="text: $data.name, attr: { id: 'link' + $index() }, click: $parent.clickListItem"></a>
       </nav>
     </div>
 
