--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </div>
   </div>
 
-  <script src="lib/mdl/material.min.js"></script>
   <script src="lib/knockout-3.4.0.js"></script>
-  <script src="lib/jquery-2.2.3.min.js"></script>
-  <script src="js/app.js"></script>
+  <script async src="lib/mdl/material.min.js"></script>
+  <script async src="lib/jquery-2.2.3.min.js"></script>
+  <script async src="js/app.js"></script>
 </body>
 
 </html>
