--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </div>
 
   <script src="lib/knockout-3.4.0.js"></script>
+  <script src="lib/jquery-2.2.3.min.js"></script>
   <script async src="lib/mdl/material.min.js"></script>
-  <script async src="lib/jquery-2.2.3.min.js"></script>
   <script async src="js/app.js"></script>
 </body>
 
