--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Udacity FE Nanodegree - Neighborhood Map Project</title>
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/app.min.css">
   <link rel="stylesheet" href="lib/mdl/material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -40,7 +40,7 @@
   <script src="lib/knockout-3.4.0.js"></script>
   <script src="lib/jquery-2.2.3.min.js"></script>
   <script async src="lib/mdl/material.min.js"></script>
-  <script async src="js/app.js"></script>
+  <script async src="js/app.min.js"></script>
 </body>
 
 </html>
